--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,6 +7,7 @@
 			<h5>Parte nº: <strong><%= quiz.id %></strong></h5>
 			<h5>Fecha: <strong><%= quiz.dia %>-<%= quiz.mes %>-<%= quiz.anio %></strong></h5>
 			<h5>Usuario: <strong><%= quiz.UserName %></strong></h5>
+			<h5>Centro: <strong><%= quiz.centro %></strong></h5>
 <!--			<h4>Proveedor: <%= quiz.proveedor %> </h4>
 			<h4>Status: <%= quiz.proceso %> </h4> -->
 
