--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -104,17 +104,19 @@
 		</div>
 	</div>
 
-	<div class="form-group">
-		<label for="preg" class="col-sm-2 control-label">Centro:</label>
+<!--	<div class="form-group">
+		<label for="centro" class="col-sm-2 control-label">Centro:</label>
 		<div class="col-sm-10">
-			<select class="form-control" id="tema" name="quiz[tema]">
-				<option value="Central" <%if (quiz.tema==="Central"){%> selected <%}%>>Central</option>
-				<option value="Gala" <%if (quiz.tema==="Gala"){%> selected <%}%>>Gala</option>
-				<option value="La Siesta" <%if (quiz.tema==="La Siesta"){%> selected <%}%>>La Siesta</option>
-				<option value="Troya" <%if (quiz.tema==="Troya"){%> selected <%}%>>Troya</option>
+			<select class="form-control" id="centro" name="quiz[centro]">
+				<option value="Central" <%if (quiz.centro==="Central"){%> selected <%}%>>Central</option>
+				<option value="Gala" <%if (quiz.centro==="Gala"){%> selected <%}%>>Gala</option>
+				<option value="La Siesta" <%if (quiz.centro==="La Siesta"){%> selected <%}%>>La Siesta</option>
+				<option value="Troya" <%if (quiz.centro==="Troya"){%> selected <%}%>>Troya</option>
 			</select>
 		</div>
-	</div>
+	</div> -->
+
+
 
 	<div class="form-group">
 		<label for="preg" class="col-sm-2 control-label">Status:</label>
