--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -1,5 +1,5 @@
 
-<div class="form-group">	
+<div class="form-group">
 	<label for="preg" class="col-sm-2 control-label">Username:</label>
 	<div class="col-sm-10">
 		<input type="text" class="form-control" id="username" name="user[username]" value="<%= user.username %>"/>
@@ -9,7 +9,28 @@
 <div class="form-group">
 	<label for="resp" class="col-sm-2 control-label">Password:</label>
 	<div class="col-sm-10">
-		<input type="password" class="form-control" id="pass" name="user[password]"/> 
+		<input type="password" class="form-control" id="pass" name="user[password]"/>
+	</div>
+</div>
+
+<div class="form-group">
+	<label for="admin" class="col-md-3 control-label">Administrador:</label>
+	<div class="col-md-1">
+		<% if (user.isAdmin) { %>
+			<input type="checkbox" class="form-control" checked id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
+		<%} else { %>
+			<input type="checkbox" class="form-control" id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
+		<%}%>
+
+
+	</div>
+</div>
+
+
+<div class="form-group">
+	<label for="centro" class="col-sm-2 control-label">Centro:</label>
+	<div class="col-sm-10">
+		<input type="text" class="form-control" id="centro" name="user[centro]" value="<%= user.centro %>"/>
 	</div>
 </div>
 
