--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -130,7 +130,12 @@
 
 	#partes_index img {
 
-		width: 30px;
+		width: 32px;
+	}
+
+	#partes_index table img {
+
+		width: 16px;
 
 	}
 
@@ -209,6 +214,7 @@
 	#menu-inicio img {
 
 		width: 18px;
+
 
 	}
 
@@ -320,7 +326,7 @@
 	}
 
 	#leyenda {
-		
+
 		width: auto;
 		max-width: 1100px;
 		margin-left: auto;
