--- a/views/contadores/_form.ejs
+++ b/views/contadores/_form.ejs
@@ -76,7 +76,7 @@
     <div class="form-group">
 		<div class="col-md-10" style="margin-left: 18vw;">
 			<a href="/contadores">
-				<button class="btn btn-danger btn-sm">
+				<button class="btn btn-danger btn-sm" type="button">
 					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
 				</button>
 			</a>
