--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -73,6 +73,7 @@
 					<li><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
 					<li><a href="/quizes/resumen_index"><img src="/images/consumos2.png" alt="" /> Consumos </a></li>
 					<li><a href="/temas"><img src="/images/centros.png" alt=""> Centros </a></li>
+					<li><a href="/user"><img src="/images/users.png" alt=""> Usuarios </a></li>
 					<li><a href="/proveedores"><i class="fa fa-lemon-o"></i> Proveedores </a></li>
 					<li><a href="/quizes/statistics"><i class="fa fa-newspaper-o"></i> Estadísticas </a></li>
 					<li><a href="/db/index"><i class="fa fa-database"></i> DB </a></li>
