--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -133,7 +133,7 @@
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<a href="/quizes">
-				<button class="btn btn-danger btn-sm">
+				<button class="btn btn-danger btn-sm" type="button">
 					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
 				</button>
 			</a>
