--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -1,42 +1,51 @@
 
-<div class="form-group">
-	<label for="preg" class="col-sm-2 control-label">Username:</label>
-	<div class="col-sm-10">
-		<input type="text" class="form-control" id="username" name="user[username]" value="<%= user.username %>"/>
+	<div class="container" id="user_form">
+
+		<div class="form-group">
+			<label for="preg" class="col-sm-3 control-label">Usuario:</label>
+			<div class="col-sm-9">
+				<input type="text" class="form-control" id="username" name="user[username]" value="<%= user.username %>"/>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="resp" class="col-sm-3 control-label">Clave:</label>
+			<div class="col-sm-9">
+				<input type="password" class="form-control" id="pass" name="user[password]"/>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="admin" class="col-md-3 control-label">Administrador:</label>
+			<div class="col-md-1">
+				<% if (user.isAdmin) { %>
+					<input type="checkbox" class="form-control" checked id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
+				<%} else { %>
+					<input type="checkbox" class="form-control" id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
+				<%}%>
+
+
+			</div>
+		</div>
+
+
+		<div class="form-group">
+			<label for="centro" class="col-sm-3 control-label">Centro:</label>
+			<div class="col-sm-9">
+				<input type="text" class="form-control" id="centro" name="user[centro]" value="<%= user.centro %>"/>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-12 text-center">
+
+				<a href="/user"><button class="btn btn-danger btn-sm" type="button"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar</button></a>
+
+				<button class="btn btn-success btn-sm" type="submit" id="grabar" value="Salvar">
+					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
+				</button>
+
+			</div>
+		</div>
+
 	</div>
-</div>
-
-<div class="form-group">
-	<label for="resp" class="col-sm-2 control-label">Password:</label>
-	<div class="col-sm-10">
-		<input type="password" class="form-control" id="pass" name="user[password]"/>
-	</div>
-</div>
-
-<div class="form-group">
-	<label for="admin" class="col-md-3 control-label">Administrador:</label>
-	<div class="col-md-1">
-		<% if (user.isAdmin) { %>
-			<input type="checkbox" class="form-control" checked id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
-		<%} else { %>
-			<input type="checkbox" class="form-control" id="admin" name="user[isAdmin]" value="<%= user.isAdmin %>"/>
-		<%}%>
-
-
-	</div>
-</div>
-
-
-<div class="form-group">
-	<label for="centro" class="col-sm-2 control-label">Centro:</label>
-	<div class="col-sm-10">
-		<input type="text" class="form-control" id="centro" name="user[centro]" value="<%= user.centro %>"/>
-	</div>
-</div>
-
-<div class="form-group">
-	<div class="col-sm-offset-2 col-sm-10">
-		<a href="/"><button type="button">Cancelar</button></a>
-		<input type="submit" value="Enviar">
-	</div>
-</div>
