--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,19 +1,25 @@
 
 <div class="container" id="new-edit">
-	<h4>Editar información de la cuenta</h4>
+	<h4>Editar cuenta de usuario</h4>
 
-	<form class="form-horizontal" 
-		method="post" 
-		action="/user/<%= user.id %>?_method=put" >      
+	<form class="form-horizontal"
+		method="post"
+		action="/user/<%= user.id %>?_method=put" >
 	  		<% include _form.ejs %>
 	</form>
 
-	<form class="form-horizontal" 
-		method="post" 
-		action="/user/<%= user.id %>?_method=delete">
-			<button type="submit" onClick="return confirm('Borrar cuenta: <%= user.username %>');">
-				Eliminar cuenta
-			</button>
-	</form>
+	<div class="row" id="borrar_cuenta">
+
+		<form class="form-horizontal"
+			method="post"
+			action="/user/<%= user.id %>?_method=delete">
+				<button class="btn btn-danger btn-sm" type="submit" onClick="return confirm('Borrar cuenta: <%= user.username %>');">
+					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Eliminar cuenta
+				</button>
+		</form>
+
+	</div>
+
+
 
 </div>
