--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,9 +1,9 @@
 
 <div class="container" id="new-edit">
 	<h4>Crear usuario:</h4>
-	<form class="form-horizontal" 
-			method="post" 
-			action="/user">
+	<form class="form-horizontal"
+			method="post"
+			action="/user/create">
 
 				<% include _form.ejs %>
 	</form>
