--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,7 +1,7 @@
 
     <div class="container animated animated-fast fadeIn" id="usuarios">
 
-        <h4><img src="/images/users.png" alt="" /> Usuarios</h4>
+        <h4><img src="/images/user.png" alt="" /> Usuarios</h4>
 
 
         <div class="panel panel-default table-responsive" id="usuarios-panel">
