--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -51,7 +51,7 @@
 
 
 	#principal {
-/*		background: url(/images/fondo01.jpg) no-repeat fixed center; */
+/*		background: url(/images/inicio/06.jpg) no-repeat fixed center; */
 
 		max-height: 100vh;
 
