--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -72,7 +72,11 @@
 					<li><a href="/quizes"><img src="/images/partes3.png" alt="" /> Partes </a></li>
 					<li><a href="/contadores"><img src="/images/contador2.png" alt="" /> Contadores </a></li>
 					<li><a href="/quizes/resumen_index"><img src="/images/consumos2.png" alt="" /> Consumos </a></li>
-					<li><a href="/temas"><img src="/images/centros.png" alt=""> Centros </a></li>
+					<% if (session.user) {
+						if (session.user.isSuperAdmin) {%>
+							<li><a href="/centros"><img src="/images/centros.png" alt=""> Centros </a></li>
+						<%}%>
+					<%}%>
 					<li><a href="/user"><img src="/images/user.png" alt=""> Usuarios </a></li>
 <!-- 					<li><a href="/proveedores"><i class="fa fa-lemon-o"></i> Proveedores </a></li>
 					<li><a href="/quizes/statistics"><i class="fa fa-newspaper-o"></i> Estadísticas </a></li>
