--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -11,6 +11,23 @@
 @media only screen and (min-width: 768px) {  			/* tablet */
 
 
+    /* SECCION 01 =============================================================== */
+    /* SECCION 01 =============================================================== */
+    /* SECCION 01 =============================================================== */
+
+    .seccion_item {
+
+        margin-bottom: 80px;
+
+
+    }
+
+
+    .seccion_item:nth-child(1) {
+        border-left: 1px solid #999999;
+    }
+
+
 
     /* ============================================================  */
     /* ======= PARTES =============================================  */
