--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -23,6 +23,51 @@
     } */
 
 
+    /* SECCION 01 =============================================================== */
+    /* SECCION 01 =============================================================== */
+    /* SECCION 01 =============================================================== */
+
+
+    #seccion_01_items {
+
+        margin-top: 2vh;
+
+        margin-left: 20px;
+        margin-right: 20px;
+
+
+
+
+    }
+
+
+    .seccion_item {
+
+        margin-bottom: 40px;
+        padding-right: 10px;
+        padding-left: 10px;
+
+    }
+
+    .seccion_item h3 {
+
+        margin-bottom: 10px;
+
+
+    }
+
+    .seccion_item p {
+
+        margin-bottom: 10px;
+        line-height: 25px;
+
+    }
+
+
+    .seccion_item:nth-child(1) {
+        border-left: 1px solid #999999;
+    }
+
 
 
     /* ============================================================  */
