--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -1,9 +1,19 @@
 
+	@font-face {
+		font-family: 'Kalinga';
+		src: url('/fonts/Kalinga.ttf');
+	}
+
 
 	html {
 
 		margin: 0;
 		padding: 0;
+
+	}
+
+	body {
+		font-family     : 'Kalinga', Calibri, Arial, sans-serif;
 
 	}
 
@@ -43,7 +53,29 @@
 
 	}
 
+	.bordes {
+/*		border-top: 	2px inset black;
+		border-bottom: 	2px groove #c6c7cc; */
 
+/*		border-top: 2px solid rgba(256, 256, 256, 0.8); */
+/*		width: 80%; */
+/*		border-top: 1px solid #c6c7cc; */
+		border-bottom: 1px solid #c6c7cc; */
+
+
+	}
+
+
+
+	/* ========== CONTENEDOR INICIAL - LAYOUT ================================================ */
+	/* ========== CONTENEDOR INICIAL - LAYOUT ================================================ */
+	/* ========== CONTENEDOR INICIAL - LAYOUT ================================================ */
+
+	#layout_container {
+
+		padding: 0px;
+
+	}
 
 
 
@@ -53,7 +85,9 @@
 	#principal {
 /*		background: url(/images/inicio/06.jpg) no-repeat fixed center; */
 
-		max-height: 100vh;
+		padding: 0px;
+
+
 
 	}
 
@@ -119,8 +153,8 @@
 
 
 
-
 	/* PARTES ===========================================================================*/
+
 
 	#partes_index {
 
@@ -169,7 +203,7 @@
 
 	#login {
 
-
+		position: absolute;
 
 
 	}
@@ -231,11 +265,22 @@
 
 
 
-	/* INICIO ******************************************************************************************/
+
+
+
+
+	/* ********** MENU INICIO *******************************************************************/
+	/* ********** MENU INICIO *******************************************************************/
+	/* ********** MENU INICIO *******************************************************************/
+
 
 	#menu-inicio {
 
-		position: relative;
+		width: 100%;
+		margin-right: 10px;
+
+		position: fixed;
+		z-index: 3;
 
 	}
 
@@ -246,21 +291,29 @@
 
 	}
 
+
+	/* ============ INICIO ================================================================== */
+	/* ============ INICIO ================================================================== */
+	/* ============ INICIO ================================================================== */
+
+
 	#inicio {
 
-/*		height: 70vh; */
-
-		max-height: 	100vh;
-		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
-
+		height: 	auto;
+		max-height: 100vh;
+		padding: 0px;
+/*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
 		overflow: 	hidden;
 
 	}
 
 
+
+
 	#inicio-panel {
 
 		max-width: 600px;
+
 		position: relative;
 		text-align: center;
 
@@ -302,6 +355,73 @@
 
 
 
+
+	/* ====================================================================================== */
+	/* SECCION 01 =========================================================================== */
+	/* ====================================================================================== */
+
+	#seccion_01 {
+
+		height: 	auto;
+		min-height: 100vh;
+		padding: 0px;
+/*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
+		position: relative;
+		overflow: 	hidden;
+
+
+
+	}
+
+
+	#seccion_01_items {
+
+		margin-top: 20vh;
+
+		margin-left: 40px;
+		margin-right: 40px;
+
+
+
+
+	}
+
+
+	.seccion_item {
+
+		padding-right: 60px;
+		padding-left: 60px;
+
+	}
+
+	.seccion_item h3 {
+
+		margin-bottom: 30px;
+		color: rgb(0, 206, 209);
+
+	}
+
+	.seccion_item p {
+
+		margin-bottom: 30px;
+		line-height: 30px;
+
+	}
+
+
+
+	.seccion_item:nth-child(2) {
+        border-left: 1px solid #999999;
+    }
+	.seccion_item:nth-child(3) {
+        border-left: 1px solid #999999;
+    }
+
+
+
+
+
+
 	/*******************************************************************************************/
 
 
@@ -319,6 +439,11 @@
 		outline: 0;
 
 	}
+
+
+
+
+	/* PRIMERA ===========================================================================*/
 
 
 
