--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,12 @@
 
 	</script>
 
-<div class="container-fluid">
+<div class="container-fluid" id="layout_container">
+
+
+
+	<% if (session.user) {%>
+
 	<nav class="navbar navbar-inverse" id="menu-inicio">
 
 		<div class="container-fluid">
@@ -111,6 +116,15 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+
+	<%} else {%>
+
+		<a id="login" href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a>
+
+	<%}%>
+
+
+
 
 	<div class="container-fluid" id="principal">
 		<% if (errors.length) { %>
