--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,93 @@
 
 
-	<div class="container centrado-v-h animated-fast fadeIn" id="inicio">
+<!--	<div class="row" id="inicio-panel">
+			<h1><%= title %></h1>
+			<p>Gestión de lecturas y consumos.</p>
+			<h6>Procedentes de suministros externos o depósitos.</h6><p>
 
-		<div class="row" id="inicio-panel">
-				<h1><%= title %></h1>
-				<p>Gestión de lecturas y consumos.</p>
-				<h6>Procedentes de suministros externos o depósitos.</h6><p>
+			<br>
 
-				<br>
+			<button class="btn btn-default"
+				data-toggle="modal"
+				data-target="#ver-mas-modal">
+					Ver más
+			</button>
 
-				<button class="btn btn-default"
-					data-toggle="modal"
-					data-target="#ver-mas-modal">
-						Ver más
-				</button>
+	</div> -->
+
+
+
+
+<!--	<div class="animated fadeIn" id="wrap">
+		<img class="bgfade responsive" src="/images/inicio/01.jpg">
+		<img class="bgfade responsive" src="/images/inicio/02.jpg">
+		<img class="bgfade responsive" src="/images/inicio/03.jpg">
+		<img class="bgfade responsive" src="/images/inicio/04.jpg">
+		<img class="bgfade responsive" src="/images/inicio/05.jpg">
+		<img class="bgfade responsive" src="/images/inicio/06.jpg">
+	</div> -->
+
+	<div class="container-fluid bordes text-center" id="inicio">
+
+
+			<img class="responsive" width="100%" position="center" src="/images/inicio/06.jpg" >
+
+
+
+	</div>
+
+
+	<!-- SECCION 01 =================================================================================== -->
+
+	<div class="container-fluid bordes" id="seccion_01">
+
+		<div class="row" id="seccion_01_items">
+
+			<div class="col-md-4 seccion_item">
+
+				<h3>Ventaja 1</h3>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+				<button class="btn btn-info" name="button">boton</button>
+
+			</div>
+
+		  	<div class="col-md-4 seccion_item">
+
+				<h3>Ventaja 2</h3>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+				<button class="btn btn-info" name="button">boton</button>
+
+			</div>
+
+		  	<div class="col-md-4 seccion_item">
+
+				<h3>Ventaja 3</h3>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+				<button class="btn btn-info" name="button">boton</button>
+
+
+			</div>
 
 		</div>
 
 
-		<div class="animated fadeIn" id="wrap">
-			<img class="bgfade responsive" src="/images/inicio/01.jpg">
-			<img class="bgfade responsive" src="/images/inicio/02.jpg">
-			<img class="bgfade responsive" src="/images/inicio/03.jpg">
-			<img class="bgfade responsive" src="/images/inicio/04.jpg">
-			<img class="bgfade responsive" src="/images/inicio/05.jpg">
-			<img class="bgfade responsive" src="/images/inicio/06.jpg">
-		</div>
+
+
+
+
+
+	</div>
+
+
+
+
+
 
 
 
@@ -116,6 +178,3 @@
 				</div>
 			</div>
 		</div>
-
-
-	</div>
