--- a/views/centros/index.ejs
+++ b/views/centros/index.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container animated animated-fast fadeIn" id="centros">
+    <div class="container animated animated-fast fadeIn margen_superior" id="centros">
 
         <h4><img src="/images/centros.png" alt=""> Centros</h4>
 
