--- a/views/contadores/index.ejs
+++ b/views/contadores/index.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container animated animated-fast fadeIn" id="contadores">
+    <div class="container animated animated-fast fadeIn margen_superior" id="contadores">
 
         <h4><img src="/images/contador2.png" alt="" /> Contadores</h4>
 
