--- a/views/contadores/show.ejs
+++ b/views/contadores/show.ejs
@@ -1,5 +1,5 @@
 
-<div class="container animated animated-fast fadeIn">
+<div class="container animated animated-fast fadeIn margen_superior">
 
 	<div class="row">
 
