--- a/views/criterios/new.ejs
+++ b/views/criterios/new.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container">
+    <div class="container margen_superior">
         <h4>Añadir criterio:</h4>
 
         <div class="container" id="criterio_form">
