--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
 
-<div class="alert alert-info" role="alert">
+<div class="alert alert-info margen_superior" role="alert">
 
 	<h4><%= message %></h4>
 	<h2><%= error.status %></h2>
