--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,5 @@
 
-<div class="container-fluid animated animated-fast fadeIn" id="partes_index">
+<div class="container-fluid animated animated-fast fadeIn margen_superior" id="partes_index">
 
 	<h4><img src="/images/partes3.png" alt="" /> Partes</h4>
 
