--- a/views/quizes/mes_index.ejs
+++ b/views/quizes/mes_index.ejs
@@ -1,5 +1,5 @@
 
-<div class="container animated animated-fast fadeIn centrado-v-h" id="mes_index">
+<div class="container animated animated-fast fadeIn centrado-v-h margen_superior" id="mes_index">
 
     <div class="panel">
 
