--- a/views/quizes/resumen.ejs
+++ b/views/quizes/resumen.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid animated animated-fast fadeIn" id="resumen">
+<div class="container-fluid animated animated-fast fadeIn margen_superior" id="resumen">
 
     <div class="row" id="head_consumos">
 
