--- a/views/quizes/resumen_index.ejs
+++ b/views/quizes/resumen_index.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="container animated animated-fast fadeIn centrado-v-h" id="resumen_index">
+<div class="container animated animated-fast fadeIn centrado-v-h margen_superior" id="resumen_index">
 
     <div class="panel">
 
