--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -13,7 +13,8 @@
 	}
 
 	body {
-		font-family     : 'Kalinga', Calibri, Arial, sans-serif;
+
+/*		font-family     : 'Kalinga', Calibri, Arial, sans-serif; */
 
 	}
 
@@ -62,6 +63,13 @@
 /*		border-top: 1px solid #c6c7cc; */
 		border-bottom: 1px solid #c6c7cc; */
 
+
+	}
+
+
+	.margen_superior {
+
+		margin-top: 80px;
 
 	}
 
@@ -158,6 +166,7 @@
 
 	#partes_index {
 
+		margin-top: 80px;
 		max-width: 1080px;
 
 	}
@@ -201,9 +210,22 @@
 
 	/* LOGIN =======================================================================================*/
 
+
+	#acceso {					/* ninot de entrada en modal-ver-mas */
+
+		margin-top: 12px;
+		margin-left: 10px;
+		position: absolute;
+		z-index: 3;
+	}
+
+	#acceso img {
+
+		width: 28px;
+	}
+
 	#login {
 
-		position: absolute;
 
 
 	}
@@ -218,7 +240,7 @@
 
 		max-width: 600px;
 
-		margin-top: 10vh;
+		margin-top: 20vh;
 		margin-right: auto;
 		margin-left: auto;
 
@@ -242,11 +264,13 @@
 
 	#usuarios {
 
+		margin-top: 80px;
 		max-width: 960px;
 
 	}
 
 	#usuarios-panel {
+
 
 		text-align: center;
 
@@ -299,11 +323,28 @@
 
 	#inicio {
 
-		height: 	auto;
-		max-height: 100vh;
+/*		background: url(/images/inicio/07.jpg) no-repeat fixed center; */
+		max-height: 70vh;
+		min-height: 230px;
 		padding: 0px;
-/*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
+
+		color: white;
 		overflow: 	hidden;
+
+	}
+
+	#inicio h1 {
+		font-size: 52px;
+	}
+
+	#inicio img {
+
+		width: 100%;
+		min-height: 230px;
+		position: relative;
+		top: 0px;
+		left: 0px;
+
 
 	}
 
@@ -312,10 +353,12 @@
 
 	#inicio-panel {
 
-		max-width: 600px;
+		width: 100%;
 
-		position: relative;
-		text-align: center;
+		position: absolute;
+		top: 5vw;
+
+		z-index: 3;
 
 
 	}
@@ -363,11 +406,12 @@
 	#seccion_01 {
 
 		height: 	auto;
-		min-height: 100vh;
+		max-height: 700px;
 		padding: 0px;
 /*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
 		position: relative;
 		overflow: 	hidden;
+
 
 
 
@@ -376,12 +420,7 @@
 
 	#seccion_01_items {
 
-		margin-top: 20vh;
-
-		margin-left: 40px;
-		margin-right: 40px;
-
-
+		margin: 20vh 40px 20vh 40px;
 
 
 	}
@@ -392,12 +431,26 @@
 		padding-right: 60px;
 		padding-left: 60px;
 
+
 	}
 
 	.seccion_item h3 {
 
 		margin-bottom: 30px;
 		color: rgb(0, 206, 209);
+
+		text-align: center;
+
+
+
+	}
+
+	.seccion_item h3 img {
+
+
+		width: 7vw;
+		min-width: 60px;
+
 
 	}
 
@@ -410,14 +463,48 @@
 
 
 
+
+
 	.seccion_item:nth-child(2) {
-        border-left: 1px solid #999999;
+        border-left: 1px solid #E6E6E6;
     }
 	.seccion_item:nth-child(3) {
-        border-left: 1px solid #999999;
+        border-left: 1px solid #E6E6E6;
     }
 
 
+
+
+	/* ====================================================================================== */
+	/* SECCION 02 =========================================================================== */
+	/* ====================================================================================== */
+
+	#seccion_02 {
+
+		height: 	auto;
+		max-height: 700px;
+		padding: 0px;
+/*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
+		position: relative;
+		overflow: 	hidden;
+
+
+
+	}
+
+
+	#seccion_02_items {
+
+		margin-top: 20vh;
+		margin-bottom: 20vh;
+
+		margin-left: 40px;
+		margin-right: 40px;
+
+
+
+
+	}
 
 
 
@@ -453,10 +540,15 @@
 	/* RESUMEN CONSUMOS ===========================================================  */
 
 
+	#resumen {
 
+
+
+	}
 
 
 	#head_consumos h4 {
+
 
 		display: inline-block;
 
@@ -532,6 +624,12 @@
 
 	/* CENTROS ===========================================================================*/
 
+	#centros {
+
+
+
+	}
+
 	#centros img {
 
 		width: 30px;
@@ -575,6 +673,13 @@
 
 
 	/*  CONTADORES ================================================================= */
+
+
+	#contadores {
+
+
+
+	}
 
 	#contadores img {
 
