--- a/views/contadores/new.ejs
+++ b/views/contadores/new.ejs
@@ -1,5 +1,5 @@
 
-    <div class="container" id="new-edit">
+    <div class="container margen_superior" id="new-edit">
 
     	<h4>Nuevo contador</h4>
 
