--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,14 +1,14 @@
 
-<div class="container" id="new-edit">
+<div class="container margen_superior" id="new-edit">
 
 	<h4>Edite el parte</h4>
 
-	<form class="form-horizontal" 
-			method="post" 
-			action="/quizes/<%= quiz.id %>?_method=put">							
-	    							
+	<form class="form-horizontal"
+			method="post"
+			action="/quizes/<%= quiz.id %>?_method=put">
+
 		<% include _form.ejs %>
-		
+
 	</form>
 
 </div>
