--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,5 +1,5 @@
 
-<div class="container" id="new-edit">
+<div class="container margen_superior" id="new-edit">
 	<h4>Editar cuenta de usuario</h4>
 
 	<form class="form-horizontal"
